--- a/Dacon-tutorial/FIFA/3회_임원기.ipynb
+++ b/Dacon-tutorial/FIFA/3회_임원기.ipynb
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,12 +1048,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fifa_train['contract_year'] = fifa_train.contract_until.str[-4:].astype(int)\n",
-    "fifa_test['contract_year'] = fifa_test.contract_until.str[-4:].astype(int)"
+    "fifa_train['contract_year'] = fifa_train.contract_until.str[-4:].astype(float)\n",
+    "fifa_test['contract_year'] = fifa_test.contract_until.str[-4:].astype(float)"
    ]
   },
   {
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1087,7 @@
        "Name: prefer_foot, dtype: object"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1098,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
        "Name: prefer_foot, dtype: int64"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1171,11 +1171,11 @@
        "stat_potential        int64\n",
        "stat_skill_moves    float64\n",
        "value               float64\n",
-       "contract_year         int32\n",
+       "contract_year       float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1315,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1325,24 +1325,24 @@
        "           max_features='auto', max_leaf_nodes=None,\n",
        "           min_impurity_decrease=0.0, min_impurity_split=None,\n",
        "           min_samples_leaf=1, min_samples_split=2,\n",
-       "           min_weight_fraction_leaf=0.0, n_estimators=500, n_jobs=None,\n",
+       "           min_weight_fraction_leaf=0.0, n_estimators=100, n_jobs=None,\n",
        "           oob_score=False, random_state=None, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rf = RandomForestRegressor(n_estimators=500, criterion='mse')\n",
+    "rf = RandomForestRegressor(n_estimators=100)\n",
     "rf.fit(fifa_train[['rep_skill','age','continent','contract_year','position','prefer_foot','reputation','stat_overall','stat_potential','stat_skill_moves']],\n",
     "       fifa_train['value'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1352,13 +1352,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "sub_example=pd.read_csv(\"data/submission.csv\")\n",
     "sub_example['value']=prediction\n",
-    "sub_example.to_csv(\"data/submission_third.csv\",index=False)"
+    "sub_example.to_csv(\"data/submission_second.csv\",index=False)"
    ]
   },
   {
@@ -1375,77 +1375,6 @@
     "- 소스코드올리기(ex 1회_wonki)\n",
     "- 파일 Attach 시키기"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "\n",
-    "label = LabelEncoder()\n",
-    "for col in [\"continent\", 'contract_year', 'position', 'prefer_foot']:    \n",
-    "    fifa_train[col] = label.fit_transform(fifa_train[col])\n",
-    "    \n",
-    "for col in [\"continent\", 'contract_year', 'position', 'prefer_foot']:    \n",
-    "    fifa_test[col] = label.fit_transform(fifa_test[col])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 164,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
-       "           max_features='auto', max_leaf_nodes=None,\n",
-       "           min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "           min_samples_leaf=1, min_samples_split=2,\n",
-       "           min_weight_fraction_leaf=0.0, n_estimators=500, n_jobs=None,\n",
-       "           oob_score=False, random_state=None, verbose=0, warm_start=False)"
-      ]
-     },
-     "execution_count": 164,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rf = RandomForestRegressor(n_estimators=500)\n",
-    "rf.fit(fifa_train[['rep_skill','age','continent','contract_year','position','prefer_foot','reputation','stat_overall','stat_potential','stat_skill_moves']],\n",
-    "       fifa_train['value'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 165,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prediction=rf.predict(fifa_test[['rep_skill','age','continent','contract_year','position',\n",
-    "                                 'prefer_foot','reputation','stat_overall','stat_potential','stat_skill_moves']])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 166,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sub_example=pd.read_csv(\"data/submission.csv\")\n",
-    "sub_example['value']=prediction\n",
-    "sub_example.to_csv(\"data/submission_7.csv\",index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
